Posts now linked to index.html

--- a/blogProject/blogApp/templates/base.html
+++ b/blogProject/blogApp/templates/base.html
@@ -24,15 +24,9 @@ https://cdn.jsdelivr.net/npm/bootswatch@5.3.2/dist/lux/bootstrap.min.css
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
+                <a target="_blank" class="nav-link" href="https://github.com/isaacenobun">My GitHub</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
-              </li>
-              <li class="nav-item dropdown">
+              <!-- <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
                 <div class="dropdown-menu">
                   <a class="dropdown-item" href="#">Action</a>
@@ -41,7 +35,7 @@ https://cdn.jsdelivr.net/npm/bootswatch@5.3.2/dist/lux/bootstrap.min.css
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="#">Separated link</a>
                 </div>
-              </li>
+              </li> -->
             </ul>
             <form class="d-flex">
               <input class="form-control me-sm-2" type="search" placeholder="Search">
