--- a/blogProject/blogApp/templates/index.html
+++ b/blogProject/blogApp/templates/index.html
@@ -1,13 +1,21 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="card text-white bg-primary mb-3" style="max-width: 20rem; margin: 20px;">
-    <div class="card-header">Header</div>
+
+{% for post in post_list %}
+<div class="card text-white bg-primary mb-3" style="max-width: 50rem; margin: 20px auto;">
+    <div class="card-header">Last updated on {{post.updated_on|date:"M d, Y"}}</div>
     <div class="card-body">
-      <h4 class="card-title">Primary card title</h4>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <h4 class="card-title" style="display: inline-block;">{{post.title}}
+            <div class="text-right" style="display: inline-block; margin-left: 20px; font-size: 10px;">
+                - by {{post.author}} on {{post.created_on|date:"M d, Y"}} 
+            </div>
+        </h4>
+      <p class="card-text">{{post.content|truncatechars:350}}</p>
     </div>
-    <button type="button" class="btn btn-secondary">Secondary</button>
+    <a href="#" class="btn btn-secondary">Read</a>
   </div>
+{% endfor %}
+    
 {% endblock content %}
 
