--- a/blogProject/blogApp/templates/index.html
+++ b/blogProject/blogApp/templates/index.html
@@ -13,7 +13,7 @@
         </h4>
       <p class="card-text">{{post.content|truncatechars:350}}</p>
     </div>
-    <a href="#" class="btn btn-secondary">Read</a>
+    <a href="{% url 'PostDetail' post.slug %}" class="btn btn-secondary">Read more</a>
   </div>
 {% endfor %}
     
