--- a/blogProject/blogApp/templates/post_detail.html
+++ b/blogProject/blogApp/templates/post_detail.html
@@ -3,12 +3,12 @@
 
 {% block content %}
 
-<div style="margin: 25px;">
+<div style="margin: 40px;">
 
     <h1>{{post.title}}</h1>
     <p>By <strong>{{post.author}}</strong></p>
-    
-    <p>{{post.content|safe}}</p>
+    <hr>
+    <p style="margin: 10px;">{{post.content|safe}}</p>
     <p style="font-size: 12px;">Created on {{post.created_on}} <br>
         Last modified on {{post.updated_on}}</p>
 </div>
